--- a/index.Rmd
+++ b/index.Rmd
@@ -37,30 +37,31 @@ library(stringr)
 
 #2  Base R
 
-2.1&nbsp; [Data types](datatypes.html)  
-2.2&nbsp; [Vectors, matrices, dataframes and lists](dataformats.html)  
-2.3&nbsp; [Generating objects](generate.vectors.html)  
+2.1&nbsp; [Data Types](datatypes.html)  
+2.2&nbsp; [Vectors, Matrices, Data frames and Lists](dataformats.html)  
+2.3&nbsp; [Generating Objects](generate.vectors.html)  
 2.4&nbsp; [Subsetting](subset.html)  
 2.5&nbsp; [Random Numbers](random.numbers.html)  
-2.6&nbsp; [Writing functions, Programming](write.functions.html)  
+2.6&nbsp; [Writing Functions, Programming](write.functions.html)  
 2.7&nbsp; [Object-Oriented Programming](object.oriented.Rmd)  
-2.8&nbsp; [Vector arithmetic, Linear Algebra](vector.arithmetic.html)   
-2.9&nbsp; [Character manipulation](character.html)  
-2.10 [Data input/output, transfering R objects](io.html)   
+2.8&nbsp; [Vector Arithmetic, Linear Algebra](vector.arithmetic.html)   
+2.9&nbsp; [Character Manipulation](character.html)  
+2.10 [Data Input/Output, Transfering R Objects](io.html)   
 2.11 [Graphs](graphs.html)  
 2.12 [Model Notation](model.notation.html)  
 2.13 [Numerical Methods](numerical.methods.html)  
-2.14 [Environments, libraries](environments.html)    
-2.15 [Costumizing R: .First, .Rprofile, Dropbox](customization.html)  
+2.14 [Environments, Libraries](environments.html)    
+2.15 [Customizing R: .First, .Rprofile, Dropbox](customization.html)  
+2.16 [List of Important base R Commands](important.commands.html)
 
 #3  Extending R, Packages
 
 3.1&nbsp; [Graphics with ggplot2](ggplot2.html)  
 3.2&nbsp; [C++ with Rcpp](rcpp.html)  
-3.3&nbsp; [Parallel and gpu computing](parallel.html)  
-3.4&nbsp; [Input/Output revisited](io1.hmtl)  
+3.3&nbsp; [Parallel and gpu Computing](parallel.html)  
+3.4&nbsp; [Input/Output Revisited](io1.hmtl)  
 3.5&nbsp; [The pipe, dplyr, tibbles, tidyverse](pipe.html)  
-3.6&nbsp; [Character manipulation with strngr](character1.html)  
+3.6&nbsp; [Character Manipulation with strngr](character1.html)  
 3.7&nbsp; [Dates with lubridate](dates.html)  
 3.8&nbsp; [Factors with forcats](forcats.html)  
 3.9&nbsp; [Iteration with purrr](purrr.html)  
