--- a/character1.Rmd
+++ b/character1.Rmd
@@ -1,4 +1,5 @@
 ---
+title: Character Manipulation with stringr
 header-includes: \usepackage{color}
 output:
   html_document: default
@@ -23,7 +24,6 @@ library(grid)
 
 `r hl()$basefontsize()`
 
-#Character Manipulation with stringr
 
 ```{r}
 library(magrittr)
