--- a/estimation.Rmd
+++ b/estimation.Rmd
@@ -1,4 +1,5 @@
 ---
+title: Estimation
 header-includes: \usepackage{color}
 output:
   html_document: default
@@ -20,8 +21,6 @@ library(ggplot2)
 library(grid)
 ```
 `r hl()$basefontsize()`
-
-#Estimation
 
 In this chapter we will study the problem of parameter estimation. In its most general form this is as follows: we have a sample $X_1,..,X_n$ from some probability density $f(x;\theta)$. Here both x and $\theta$ might be vectors. Also we will use the term density for both the discrete and the continuous case. 
 
