--- a/graphs.Rmd
+++ b/graphs.Rmd
@@ -1,4 +1,5 @@
 ---
+title: Graphs
 header-includes: \usepackage{color}
 output:
   html_document: default
@@ -21,34 +22,50 @@ library(grid)
 ```
 `r hl()$basefontsize()`
 
-#Graphs
-
 In this section we will discuss some graphs that are part of base R. Later we will study more advanced graphics, but it is still a good idea to know how to draw a base graph.
 
-##Barcharts
+#Barcharts
 
 Say we have the data on the number of freshman, sophomores etc at some college:
 
 ```{r, echo=FALSE}
-student.levels <- c("Freshman", "Sophomore", "Junior", "Senior")
-students <- sample(student.levels, size=1000, replace = TRUE, prob = 6:3)
-st.y <- factor(students, levels = student.levels, ordered = TRUE)
-
+student.levels <- 
+  c("Freshman", "Sophomore", "Junior", "Senior")
+students <- sample(student.levels, 
+                   size=1000, 
+                   replace = TRUE, 
+                   prob = 6:3)
+st.y <- factor(students, 
+               levels = student.levels, 
+               ordered = TRUE)
 students.ord <- table(st.y)
 kable(students.ord, col.names = c("Class", "Counts"))
 ```
 
 ```{r}
 head(students)
+```
+
+So here we have a *categorical* variable. One popular graph for this type of data is the *pie chart*, 
+
+BUT repeat after me: [pie charts are evil!!](http://www.storytellingwithdata.com/blog/2011/07/death-to-pie-charts)
+
+A MUCH better alternative are barcharts:
+
+```{r}
 barplot(table(students))
 ```
+
+**Note** that the argument to barplot has to be a table.
 
 But this is not quite right, Sophomores should come second. In general, when we have a categorical variable which has an ordering we should turn it into a factor:
 
 ```{r}
-students.fac <- factor(students, 
-      levels = c("Freshman", "Sophomore", "Junior", "Senior"), 
-      ordered = TRUE)
+students.fac <- 
+  factor(students, 
+         levels = c("Freshman", "Sophomore", 
+                 "Junior", "Senior"), 
+         ordered = TRUE)
 tbl.students.fac <- table(students.fac)
 barplot(tbl.students.fac)
 ```
@@ -56,53 +73,88 @@ barplot(tbl.students.fac)
 There are a number of arguments we find in most graphics routines:
 
 ```{r}
-barplot(tbl.students.fac, main = "Our Students",
-        xlab = "Class", ylab = "Counts")
+barplot(tbl.students.fac, 
+        main = "Our Students",
+        xlab = "Class", 
+        ylab = "Counts")
 ```
 
 and then there are arguments specific to the graph:
 
+
 ```{r}
-barplot(tbl.students.fac, main = "Our Students",
-        xlab = "Class", ylab = "Counts", 
-        horiz = TRUE, density = 10,
+barplot(tbl.students.fac, 
+        main = "Our Students",
+        xlab = "Counts", 
+        ylab = "", 
+        horiz = TRUE, 
+        density = 10,
         col = c("lightblue", "mistyrose",
-                "lightcyan", "lavender"),)
+                "lightcyan", "lavender"))
 ```
 
-##Histogram
+Notice that we can't see all the y labels. It would be better to have them horizontal as well. But we also need to make space for them:
+
+```{r}
+par(mai=c(1,2,1,1))
+barplot(tbl.students.fac, 
+        main = "Our Students",
+        xlab = "Counts", 
+        ylab = "", 
+        horiz = TRUE, 
+        density = 10,
+        las = 1,
+        col = c("lightblue", "mistyrose",
+                "lightcyan", "lavender"))
+```
+
+Here I used the *par* command to set some parameters for how the graph is drawn. There is a very long list of such parameters see ?par
+
+#Histogram
 
 ```{r}
 x <- rnorm(1000, 100, 20)
-hist(x, breaks=50, main = "IQ",
-        xlab = "IQ", ylab = "Counts")
+hist(x, 
+     breaks = 50, 
+     main = "IQ",
+     xlab = "IQ", 
+     ylab = "Counts")
 ```
 
 Often the hist command is useful for its side effect of counting:
 
 ```{r error=TRUE}
 range(x)
-hist(x, breaks=c(0, 50, 80, 100, 120, 150, 250), plot = FALSE)$counts
+hist(x, 
+  breaks = c(0, 50, 80, 100, 120, 150, 250), 
+  plot = FALSE)$counts
 ```
 
 Often we want to compare a histogram with a theoretical curve, say a probability density. Then we can use the curve command with the argument add=TRUE:
 
 ```{r}
 x <- c(rnorm(1500, 100, 20), rnorm(1000, 140, 10))
-hist(x, breaks=50, main = "", freq=FALSE)
-f <- function(x) 1.5*dnorm(x, 100, 20) + dnorm(x, 140, 10)
+hist(x, 
+     breaks = 50, 
+     main = "", 
+     freq=FALSE)
+f <- function(x) 
+   1.5*dnorm(x, 100, 20) + dnorm(x, 140, 10)
 I <- integrate(f, 0, 200)$value
-curve(f(x)/I, from=min(x), to=max(x), add=TRUE, col="blue", lwd=2)
+curve(f(x)/I, from=min(x), to=max(x), 
+      add = TRUE, 
+      col = "blue", 
+      lwd = 2)
 ```
 
-##Empirical Distribution Function
+#Empirical Distribution Function
 
 ```{r}
 plot(ecdf(x))
 ```
 
 
-##Boxplot
+#Boxplot
 
 ```{r}
 boxplot(x, horizontal = TRUE)
@@ -110,14 +162,14 @@ attach(mothers)
 boxplot(Length~Status)
 ```
 
-##Normal Probability Plot
+#Normal Probability Plot
 
 ```{r}
 qqnorm(x)
 qqline(x)
 ```
 
-##Scatterplot
+#Scatterplot
 
 
 ```{r echo=FALSE}
@@ -170,7 +222,6 @@ for(i in 1:6) {
 
 ```
 
-
 Consider the data set mtcars, which is part of base R. It has data on 32 different cars:
 
 ```{r}
@@ -193,17 +244,23 @@ legend(250, 33, paste(2*2:4, "Cylinders"),
        col = c("blue", "green", "red"))
 ```
 
-##Multiple Graphs
+#Multiple Graphs
 
 sometimes we want to combine several graphs into one
 
 ```{r}
 par(mfrow=c(2, 2))
-hist(rnorm(1000), 50, main="Normal Distribution")
-hist(rt(1000, 2), 50, main="t Distribution, df=2")
-hist(runif(1000), 50, main="Uniform Distribution")
+hist(rnorm(1000), 50, 
+     main="Normal Distribution",
+     ylab="", xlab="")
+hist(rt(1000, 2), 50, main="t Distribution, df=2",
+     ylab="", xlab="")
+hist(runif(1000), 50, main="Uniform Distribution",
+     ylab="", xlab="")
 hist(rchisq(1000, 2), 50, 
-     main=expression(paste(chi^2, " Distribution, df=2")))
+     main = expression(paste(chi^2, 
+            " Distribution, df=2")),
+     ylab="", xlab="")
 ```
 
 This works fine for rectangular arrays. For more complicated graphs we have the *layout* command. Let's create a scatterplot of mpg by hp with marginal boxplots:
@@ -219,24 +276,31 @@ par(mar = c(3, 0, 1, 1))
 boxplot(mpg, axes = FALSE)
 ```
 
-##Functions that create graphs
+#Functions that create graphs
 
 When I write a paper or a talk or anything else that requires some graphs I always write a routine *plot.mytalk*, which has everything to recreate every graph. This is a great way to not only make changes if necessary but also to remind myself what I did back years ago when I wrote it.
 
 Caveat: these days R Markdown can be used for the same purpose.
 
-##Graphs that don't look like Graphs
+#Graphs that don't look like Graphs
 
 we can use R to make other types of pictures. Consider this diagram, which I use to illustrate the topic of Cause vs Effect:
 
 ```{r, echo=FALSE}
 draw.cause.effect <- function() {
-  plot(c(10, 100), c(40, 100), axes=F, xlab="", ylab="", type="n")
-  text(15, 90, "Cause-Effect", cex=1.2, adj = 0)
-  text(c(20, 40), c(65, 65), c("X", "Y"), cex=1.1, adj=0)
+  plot(c(10, 100), c(40, 100), 
+       axes = FALSE, 
+       xlab = "", ylab = "", 
+       type = "n")
+  text(15, 90, "Cause-Effect", 
+       cex=1.2, adj = 0)
+  text(c(20, 40), c(65, 65), c("X", "Y"), 
+       cex=1.1, adj=0)
   arrows(25, 65, 38, 65)
-  text(56, 90, "Confounding Variable", cex=1.2, adj=0)
-  text(c(60, 70, 80), c(50, 75, 50), c("X", "Z", "Y"), cex=1.1, adj=0)
+  text(56, 90, "Confounding Variable", 
+       cex=1.2, adj=0)
+  text(c(60, 70, 80), c(50, 75, 50), c("X", "Z", "Y"),
+       cex=1.1, adj=0)
   arrows(70, 70, 62, 55)  
   arrows(70, 70, 78, 55)  
   
@@ -247,15 +311,19 @@ draw.cause.effect()
 it is actually done with these commands:
 
 ```{r eval=FALSE}
-plot(c(10, 100), c(40, 100), axes=F, xlab="", ylab="", type="n")
-text(15, 90, "Cause-Effect", cex=1.2, adj = 0)
-text(c(20, 40), c(65, 65), c("X", "Y"), cex=1.1, adj=0)
+plot(c(10, 100), c(40, 100), axes=F, 
+     xlab="", ylab="", type="n")
+text(15, 90, "Cause-Effect", 
+     cex=1.2, adj = 0)
+text(c(20, 40), c(65, 65), c("X", "Y"), 
+     cex=1.1, adj=0)
 arrows(25, 65, 38, 65)
-text(56, 90, "Confounding Variable", cex=1.2, adj=0)
-text(c(60, 70, 80), c(50, 75, 50), c("X", "Z", "Y"), cex=1.1, adj=0)
+text(56, 90, "Confounding Variable", 
+     cex=1.2, adj=0)
+text(c(60, 70, 80), c(50, 75, 50), c("X", "Z", "Y"),
+     cex=1.1, adj=0)
 arrows(70, 70, 62, 55)  
 arrows(70, 70, 78, 55)  
-}
 ```
 
 An important example of this are maps:
@@ -266,8 +334,16 @@ map("usa")
 text(-87.623177, 41.881832, "Chicago", cex=1.3)
 ```
 
+People have done some very funny things with this. Run this code in the console:
 
-##Printing Graphs
+```{r eval=FALSE}
+library(cowsay)
+say("Hello world!", by = "cow")
+```
+
+
+
+#Printing Graphs
 
 Often we need to save a graph as a png or a postscript file, so we can include it in a webpage or a latex document. I have to do this often enough I wrote a routine for it:
 
