--- a/rcpp.Rmd
+++ b/rcpp.Rmd
@@ -1,4 +1,5 @@
 ---
+title: C++ with Rcpp
 header-includes: \usepackage{color}
 output:
   html_document: default
@@ -15,6 +16,7 @@ th, td {padding: 10px;}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
 load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
 library(knitr)
+library(wolfr)
 opts_chunk$set(fig.width=6, fig.align = "center", 
       out.width = "70%", warning=FALSE, message=FALSE)
 library(ggplot2)
@@ -22,7 +24,8 @@ library(grid)
 ```
 `r hl()$basefontsize()`
 
-#Rcpp
+
+#Basics
 
 For this section you will need the Rcpp and the microbenchmark packages.
 
@@ -57,9 +60,11 @@ Now of course we can immediately speed things up by vectorizing the routine:
 dist2 <- function(x, y) {
   sqrt(x^2+y^2)
 }
-summary(microbenchmark(dist2(x, y)))["mean"]
+tmpR <- round(
+  summary(microbenchmark(dist2(x, y)))["mean"], 1)
+tmpR
 ```
- 
+
 Can we do even better?  
 
 ```{r engine='Rcpp'}
@@ -96,14 +101,16 @@ NumericVector dist4(NumericVector x, NumericVector y) {
 ```
 
 ```{r}
-summary(microbenchmark(dist4(x, y)))["mean"]
+tmpRcpp <- round(
+  summary(microbenchmark(dist4(x, y)))["mean"], 1)
+tmpRcpp
 ```
 
 Those of you who already know a bit of C++ are going to be quite amazed, because this is not even C++, it is sort of "vectorized" C++!
 
 `r hl()$hr()`
 
-Now the difference between 3.6 and 12.1 milliseconds (the fastest non-C++ time) might not seem like much, but imagine if we had to run this routine one million times, then the R routine would take $12*10^{-3}\times 10^6/3600=3.3$ hours, but the Cpp routine takes only 1.5 hours. Writing it takes literally 1 minute! (assuming you know how)  
+Now the difference between `r tmpRcpp` and `r tmpR`  milliseconds (the fastest non-C++ time) might not seem like much, but imagine if we had to run this routine one million times, then the R routine would take `r tmpR` $*10^{-3}\times 10^6/3600=$ `r round(tmpR*10^{-3}*10^6/3600,1)` hours, but the Cpp routine takes only `r round(tmpRcpp*10^{-3}*10^6/3600, 1)` hours. Writing it takes literally 1 minute! (assuming you know how)  
 
 To start let's discuss a few differences between R and C++ syntax:
 
@@ -122,7 +129,7 @@ The easiest way to get started is to just use RStudio - File - New File - C++ Fi
 
 There are some special variable types you need to use when moving data from R to C++ and back. The most important is the one used in our programs above: NumericVector. It is just what it says it is.
 
-##Debugging
+#Debugging
 
 Generally you should only turn fairly short code into C++, so debugging is not to big a problem. However, on occasion you might want to add a print statement to your code, so you can find out where it fails. here is how:
 
