--- a/shiny.Rmd
+++ b/shiny.Rmd
@@ -1,4 +1,5 @@
 ---
+title: Interactive Web Applications with shiny
 header-includes: \usepackage{color}
 output:
   html_document: default
@@ -21,8 +22,6 @@ library(ggplot2)
 library(grid)
 ```
 `r hl()$basefontsize()`
-
-#Interactive Web Applications with shiny
 
 
 ```{r}
